--- a/Views/BoardView.xaml
+++ b/Views/BoardView.xaml
@@ -1,12 +1,24 @@
-﻿<Window x:Class="ChessRebirth.Views.BoardView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ChessRebirth.Views"
-        mc:Ignorable="d"
-        Title="BoardView" Height="450" Width="800">
+﻿<UserControl x:Class="ChessRebirth.Views.BoardView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             mc:Ignorable="d">
     <Grid>
-        
+        <ItemsControl x:Name="BoardItemsControl" ItemsSource="{Binding Cells}">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <UniformGrid Columns="8" Rows="8"/>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <Grid Background="{Binding CellColor}">
+                        <ContentControl Content="{Binding Piece}"
+                                        ContentTemplate="{StaticResource PieceViewTemplate}"/>
+                    </Grid>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
     </Grid>
-</Window>
+</UserControl>
