--- a/Views/PieceView.xaml
+++ b/Views/PieceView.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="ChessRebirth.Views.PieceView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ChessRebirth.Views"
-        mc:Ignorable="d"
-        Title="PieceView" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
-</Window>
+﻿<UserControl x:Class="ChessRebirth.Views.PieceView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             mc:Ignorable="d">
+    <Viewbox>
+        <Canvas Width="45" Height="45">
+            <!-- Векторное представление шахматной фигуры -->
+        </Canvas>
+    </Viewbox>
+</UserControl>
