--- a/Views/BoardView.xaml
+++ b/Views/BoardView.xaml
@@ -3,8 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:ChessRebirth.ViewModels"
              mc:Ignorable="d">
-    <Grid>
+    <UserControl.DataContext>
+        <Binding Path="BoardViewModel" />
+    </UserControl.DataContext>
+    <Grid x:Name="BoardGrid" Margin="10" Background="Transparent">
         <ItemsControl x:Name="BoardItemsControl" ItemsSource="{Binding Cells}">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
@@ -13,7 +17,17 @@
             </ItemsControl.ItemsPanel>
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <Grid Background="{Binding CellColor}">
+                    <Grid MouseLeftButtonDown="Grid_MouseLeftButtonDown">
+                        <Grid.Style>
+                            <Style TargetType="Grid">
+                                <Setter Property="Background" Value="{Binding CellColor}" />
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding IsHighlighted}" Value="True">
+                                        <Setter Property="Background" Value="Yellow"/>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Grid.Style>
                         <ContentControl Content="{Binding Piece}"
                                         ContentTemplate="{StaticResource PieceViewTemplate}"/>
                     </Grid>
